--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,8 @@ html(lang="en")
     header 
       h1 Hello!
     main
-      h3 Welcome to Noom
+      ul
+      form
+        input(type="text", placeholder="write a message", required)
+        button send
     script(src="/public/js/app.js") 
