--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,14 +7,12 @@ html(lang="en")
     title Noom 
     link(rel="stylesheet", href="https://unpkg.com/mvp.css@1.12/mvp.css")
   body 
-    header 
-      h1 Hello!
+    header
+      h1 Noom
     main
-      form#nick
-        input(type="text", placeholder="choose a nickname", required)
-        button Save 
-      ul
-      form#message
-        input(type="text", placeholder="write a message", required)
-        button send
+      div#welcome
+        form
+          input(placeholder="room name", required, type="text")
+          button Enter Room
+    script(src="/socket.io/socket.io.js") 
     script(src="/public/js/app.js") 
